trunk/NewArchive/7811d5cf2e879258676d83df4d501d70-862de6335e18fd7902bf2c42ffee0752/output
+ g++-4.8 -std=c++11 main.cpp -o main
main.cpp:19:5: error: ‘optional’ in namespace ‘boost’ does not name a type
     boost::optional<T> get(std::string const& name) {
     ^
main.cpp:26:1: error: expected ‘;’ after class definition
 }
 ^
